apps/alloy/daemonset.yaml
# Source: alloy/templates/controllers/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: alloy-profiles
  labels:
    app.kubernetes.io/name: alloy-profiles
    app.kubernetes.io/instance: alloy
    app.kubernetes.io/version: "v1.4.2"
    app.kubernetes.io/part-of: alloy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: alloy-profiles
      app.kubernetes.io/instance: alloy
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: alloy
        k8s.grafana.com/logs.job: integrations/alloy
      labels:
        app.kubernetes.io/name: alloy-profiles
        app.kubernetes.io/instance: alloy
    spec:
      serviceAccountName: alloy-profiles
      containers:
        - name: alloy
          image: grafana/alloy:v1.20.1
          imagePullPolicy: IfNotPresent
          args:
            - run
            - /etc/alloy/config.alloy
            - --storage.path=/tmp/alloy
            - --server.http.listen-addr=0.0.0.0:12345
            - --server.http.ui-path-prefix=/
            - --stability.level=experimental
            - --disable-reporting
            #- --stability.level=generally-available
          ports:
            - containerPort: 12345
              name: http-metrics
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 12345
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - name: config
              mountPath: /etc/alloy
            - name: varlog
              mountPath: /var/log
              readOnly: true
          securityContext:
            privileged: true
            runAsGroup: 0
            runAsUser: 0
        - name: config-reloader
          image: ghcr.io/jimmidyson/configmap-reload:v0.15.0
          args:
            - --volume-dir=/etc/alloy
            - --webhook-url=http://localhost:12345/-/reload
          volumeMounts:
            - name: config
              mountPath: /etc/alloy
          resources:
            requests:
              cpu: 1m
              memory: 5Mi
      dnsPolicy: ClusterFirst
      volumes:
        - name: config
          configMap:
            name: alloy-profiles
        - name: varlog
          hostPath:
            path: /var/log
      hostPID: true
