apps/alloy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alloy-profiles
  labels:
    app.kubernetes.io/name: alloy-profiles
    app.kubernetes.io/instance: alloy
    app.kubernetes.io/version: "v1.4.2"
    app.kubernetes.io/part-of: alloy
    app.kubernetes.io/component: networking
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: alloy-profiles
    app.kubernetes.io/instance: alloy
  ports:
    - name: http-metrics
      port: 12345
      targetPort: 12345
      protocol: TCP
