apps/alloy/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: alloy-profiles
spec:
  hosts:
    - alloy-profiles.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: alloy-profiles.alloy.svc.cluster.local
            port:
              number: 12345
